# cloudsecure

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  cloudsecure-assessment-platform-spec.md  deploy.sh  destroy.sh  install.sh
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish-prowler.yml  secrets-scan.yml
cli/: README.md  pyproject.toml
cli/cloudsecure/: __init__.py  config.py  main.py
cli/tests/: conftest.py  test_api.py  test_config.py  test_main.py
docs/: architecture.html  generate_demo_report.py
docs/comparison/: before-after-table.md
docs/diagrams/: README.md  analyzer-coverage.drawio  assessment-workflow.drawio  cloudsecure-architecture.drawio  security-model.drawio
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/stacks/: api-stack.ts  lambda-stack.ts  orchestration-stack.ts  storage-stack.ts
lambdas/: README.md  pyproject.toml
lambdas/ai_synthesis/: __init__.py  handler.py
lambdas/analyzers/: __init__.py  aggregate_findings.py  base.py  cloudtrail_analyzer.py  encryption_analyzer.py  iam_analyzer.py  network_analyzer.py  s3_analyzer.py
lambdas/api_handlers/: __init__.py  get_assessment.py  get_report.py  list_assessments.py  start_assessment.py
lambdas/discovery_module/: __init__.py  handler.py
lambdas/layer/: README.md
lambdas/native_service_puller/: __init__.py  handler.py
lambdas/prowler_scanner/: Dockerfile  __init__.py  handler.py  placeholder_handler.py
lambdas/report_generator/: __init__.py  handler.py
lambdas/report_generator/templates/: report.html
lambdas/shared/: __init__.py  aws_client.py  crf_models.py  models.py  requirements.txt
lambdas/tests/: __init__.py  conftest.py  test_aggregate_findings.py  test_ai_synthesis.py  test_aws_client.py  test_base_analyzer.py  test_cloudtrail_analyzer.py  test_crf_models.py  test_encryption_analyzer.py  test_get_assessment.py  test_get_report.py  test_iam_analyzer.py  test_list_assessments.py  test_models.py  test_network_analyzer.py  test_prowler_normalizer.py  test_s3_analyzer.py  test_start_assessment.py
lambdas/validate_role/: __init__.py  handler.py
onboarding/cloudformation/: cloudsecure-role.yaml
onboarding/terraform/modules/cloudsecure-role/: README.md  main.tf  outputs.tf  variables.tf
