[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsecure"
dynamic = ["version"]
description = "CLI for the CloudSecure AWS Security Assessment Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "CloudSecure Contributors" },
]
keywords = ["aws", "security", "assessment", "cloud", "compliance", "cis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
    "boto3>=1.28",
    "botocore>=1.31",
    "rich>=13.0",
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/carlosinfantes/cloudsecure"
Repository = "https://github.com/carlosinfantes/cloudsecure"
Issues = "https://github.com/carlosinfantes/cloudsecure/issues"

[project.scripts]
cloudsecure = "cloudsecure.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cloudsecure --cov-report=term-missing"

[tool.setuptools.dynamic]
version = { attr = "cloudsecure.__version__" }

[tool.setuptools.packages.find]
include = ["cloudsecure*"]
